kubernetes/validating-webhook-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: image-signature-webook
webhooks:
  - name: image-signature.example.com
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
        resources:
          - pods
    failurePolicy: Ignore
    clientConfig:
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUR1RENDQXFDZ0F3SUJBZ0lVRCs4dDJvNno0UXo2a0lFLy85YjErSjlxdUtvd0RRWUpLb1pJaHZjTkFRRUwKQlFBd1lqRUxNQWtHQTFVRUJoTUNWVk14RHpBTkJnTlZCQWdUQms5eVpXZHZiakVSTUE4R0ExVUVCeE1JVUc5eQpkR3hoYm1ReEVEQU9CZ05WQkFvVEIwZHlZV1psWVhNeEN6QUpCZ05WQkFzVEFrTkJNUkF3RGdZRFZRUURFd2RICmNtRm1aV0Z6TUI0WERURTNNVEF4TmpBMk1UWXdNRm9YRFRJeU1UQXhOVEEyTVRZd01Gb3dZakVMTUFrR0ExVUUKQmhNQ1ZWTXhEekFOQmdOVkJBZ1RCazl5WldkdmJqRVJNQThHQTFVRUJ4TUlVRzl5ZEd4aGJtUXhFREFPQmdOVgpCQW9UQjBkeVl [...]
      service:
        name: image-signature-webhook
        namespace: default
